--- a/Views/Pizza/Index.cshtml
+++ b/Views/Pizza/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<Pizza>
 <div class="container-fluid text-center pizze_index">
-    <div class="row g-4">
+    <div class="row justify-content-between align-items-center g-4">
         @foreach (Pizza pizza in Model)
         {
             <div class="col">
